samples/_failures_safe/1761345266_e07682_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7533be89.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_7533be89.c:186:17: error: expected expression at end of input
  186 |                 dist[v] =
      |                 ^~~~
./samples/SAFE/__tmp_7533be89.c:186:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7533be89.c:186:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7533be89.c:186:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7533be89.c:186:17: error: expected declaration or statement at end of input
